--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,30 @@ a{
 }
 
 ul{
+  width: 100%;
   list-style-type: none;
   font-size: 22px;
   text-align: center;
   color: grey;
+  display: flex;
+  flex-direction: column;
+}
+
+ul li{
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 0;
+  margin: 0;
+}
+
+ul li:hover{
+  background-color: rgb(187, 186, 187);
+  color: rgb(68, 68, 68);
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 header{
@@ -31,6 +51,7 @@ header > div{
 }
 
 .tendina{
+  width: 250%;
   display: none;
   position: absolute;
   transform: rotateX(-50%);
